# OpenReservoirComputing

./: LICENSE  README.md  commit_changes_visualization_NOA.py  how to commit changes.txt  installs_NOA.txt  mkdocs.yml  pyproject.toml  test_RC_background.py  test_lorenz_NOA.py  test_lorenz_ORC.py
.github/: CODEOWNERS
.github/workflows/: tests.yml
data/: integrators.py
docs/: contributing.md  index.md
docs/api/: data.md  drivers.md  embeddings.md  models.md  rc.md  readouts.md  utils.md
docs/examples/: lorenz.ipynb  rc_background.ipynb
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/user-guide/: data.md  drivers.md  embeddings.md  models.md  overview.md  rc-basics.md  readouts.md
examples/: continuous_rc.ipynb  eigval_solver.ipynb  ensemble.ipynb  lorenz.ipynb  rc_background.ipynb
src/orc/: __init__.py  drivers.py  embeddings.py  rc.py  readouts.py  utils.py
src/orc/classifier/: __init__.py  base.py  models.py  train.py
src/orc/control/: __init__.py  base.py  models.py  train.py
src/orc/data/: __init__.py  integrators.py
src/orc/forecaster/: __init__.py  base.py  models.py  train.py
src/orc/models/: __init__.py  esn.py
src/orc/tuning/: __init__.py
src/orc/utils/: __init__.py  numerics.py  regressions.py  visualization.py
tests/: requirements_dev.txt  test_drivers.py  test_embeddings.py  test_readouts.py  test_utils.py
tests/data/: test_integrators.py
tests/forecaster/: test_models.py
tests/models/: test_esn.py
tests/utils/: test_numerics.py  test_regressions.py  test_visualization.py
